--- a/demo/kernal_codes_demo.ipynb
+++ b/demo/kernal_codes_demo.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9586a365",
+   "metadata": {},
+   "source": [
+    "## Note\n",
+    "1. Glasses image should be type of .png or .webp as this program needs glasses images have alpha channel."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0943f544",
@@ -39,7 +48,6 @@
    ],
    "source": [
     "# Method BEST one\n",
-    "\n",
     "import cv2\n",
     "import numpy as np\n",
     "import mediapipe as mp\n",
