modify the technical document

--- a/demo/kernal_codes_demo.ipynb
+++ b/demo/kernal_codes_demo.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "#### Note\n",
     "1. Glasses image should be type of .png or .webp as this program needs glasses images have alpha channel. If The extension of galsses image is .jpg or .jepg, then this demo will not working.\n",
-    "2. You can read demo/technical_document.md file to get ideas expalined in details and its python implementation."
+    "2. You can read demo/technical_document.md file to get ideas expalined in details."
    ]
   },
   {
