modify the technical document

--- a/demo/kernal_codes_demo.ipynb
+++ b/demo/kernal_codes_demo.ipynb
@@ -10,7 +10,7 @@
     "Besides, you can also do the fine tunning or other modification here as it's quick to get feedback on notebook.\n",
     "\n",
     "#### Note\n",
-    "1. Glasses image should be type of .png or .webp as this program needs glasses images have alpha channel. If The extension of galsses image is .jpg or .jepg, then this demo will not working.\n",
+    "1. Glasses image should be type of .png or .webp as this program needs glasses images have alpha channel. If The extension of galsses image is .jpg or .jepg, then this demo will not working. But if run demo/run_demo.py, it still return a ovelay result with unexpected effect even though glasses image url ends with .jpeg or .jpg.\n",
     "2. You can read demo/technical_document.md file to get ideas expalined in details."
    ]
   },
