Improve the technical_document.md and supplement relevant images

--- a/demo/kernal_codes_demo.ipynb
+++ b/demo/kernal_codes_demo.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0943f544",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,8 @@
     "\n",
     "def remove_lens_region(img_rgba: np.ndarray) -> np.ndarray:\n",
     "    \"\"\"\n",
-    "    Removes the glasses' lens region (including anything inside, like temple arms) from an RGBA image by setting those areas to transparent (alpha = 0),\n",
+    "    Removes the glasses' lens region (including anything inside, like temple arms) from an RGBA image  and make lens region transparent \n",
+    "    by setting those areas to transparent (alpha = 0),\n",
     "    while preserving the frame and other regions.\n",
     "    \"\"\"\n",
     "    # Check if the image contains an alpha channel\n",
